8273456: Do not hold ttyLock around stack walking 8273629: compiler/uncommontrap/TestDeoptOOM.java fails with release VMs
Reviewed-by: lucy, phh
Backport-of: 461a467f91ba19ae35d7833b7d3e74f62f52e19c